--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="/icon.png" />
+    <link rel="shortcut icon" type="image/png" href="./Assets/images/icon.png" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Assets/CSS/style.css" />
     <title>Bankist</title>
   </head>
   <body>
     <!-- TOP NAVIGATION -->
     <nav>
       <p class="welcome">Log in to get started</p>
-      <img src="logo.png" alt="Logo" class="logo" />
+      <img src="./Assets/images/logo.png" alt="Logo" class="logo" />
       <form class="login">
         <input
           type="text"
@@ -42,10 +42,10 @@
         <div>
           <p class="balance__label">Current balance</p>
           <p class="balance__date">
-            As of <span class="date">05/03/2037</span>
+            As of <span class="date">05/03/2027</span>
           </p>
         </div>
-        <p class="balance__value">0000€</p>
+        <p class="balance__value">0000#</p>
       </div>
 
       <!-- MOVEMENTS -->
@@ -53,25 +53,25 @@
         <div class="movements__row">
           <div class="movements__type movements__type--deposit">2 deposit</div>
           <div class="movements__date">3 days ago</div>
-          <div class="movements__value">4 000€</div>
+          <div class="movements__value">4 000#</div>
         </div>
         <div class="movements__row">
           <div class="movements__type movements__type--withdrawal">
             1 withdrawal
           </div>
           <div class="movements__date">24/01/2037</div>
-          <div class="movements__value">-378€</div>
+          <div class="movements__value">-378#</div>
         </div>
       </div>
 
       <!-- SUMMARY -->
       <div class="summary">
         <p class="summary__label">In</p>
-        <p class="summary__value summary__value--in">0000€</p>
+        <p class="summary__value summary__value--in">0000#</p>
         <p class="summary__label">Out</p>
-        <p class="summary__value summary__value--out">0000€</p>
+        <p class="summary__value summary__value--out">0000#</p>
         <p class="summary__label">Interest</p>
-        <p class="summary__value summary__value--interest">0000€</p>
+        <p class="summary__value summary__value--interest">0000#</p>
         <button class="btn--sort">&downarrow; SORT</button>
       </div>
 
@@ -119,10 +119,10 @@
       </p>
     </main>
 
-    <!-- <footer>
+    <footer>
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
-    </footer> -->
+    </footer>
 
-    <script src="script.js"></script>
+    <script src="./Assets/javascript/script.js"></script>
   </body>
 </html>
