--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
         You will be logged out in <span class="timer">05:00</span>
       </p>
     </main>
-
+<!-- 
     <footer>
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
-    </footer>
+    </footer> -->
 
     <script src="./Assets/javascript/script.js"></script>
   </body>
